<resources>
    <string name="app_name">DoNotForget</string>
    <string name="msgText">Add text for notification or Long press to add a prepared text</string>
    <string name="deleteReminder">Please Long press on the item to delete it</string>
    <string name="save">Save</string>
    <string name="toDate">To</string>
    <string name="fromDate">From</string>
    <string name="atTime">At Time</string>
    <string name="onceDay">Once a day</string>
    <string name="onceWeek">At</string>
    <string name="weekly">at defined days</string>
    <string name="onceMonth">Once a month</string>
    <string name="onceYear">Once a year</string>
    <string name="sunday">Sun</string>
    <string name="monday">Mon</string>
    <string name="tuesday">Tue</string>
    <string name="wednesday">Wed</string>
    <string name="thursday">Thu</string>
    <string name="friday">Fri</string>
    <string name="saturday">Sat</string>
    <string name="playRingtone">Play ringtone</string>
    <string name="date">Date of notification</string>
    <string name="time">Time of notification</string>
    <string name="choose_notification">Please select a one-time or recurring notification</string>
    <string name="msg_empty">Please enter the text for notification</string>
    <string name="contacts_empty">Please select the contact</string>
    <string name="groups_empty">Please select the group for notification</string>
    <string name="select_group_edit_err">Please select the group to edit</string>
    <string name="select_group_delete_err">Please select the group to delete</string>
    <string name="select_msg_edit_err">Please select the message to edit</string>
    <string name="select_msg_err">Please select the message</string>
    <string name="msg_list_empty_err">The list of messages is empty. Please press the \"Prepare Messages\" button to prepare your messages</string>
    <string name="select_msg_delete_err">Please select the message to delete</string>
    <string name="date_empty">Please specify the date</string>
    <string name="dateFrom_empty">Please specify the From date</string>
    <string name="dateTo_empty">Please specify the To date</string>
    <string name="time_empty">Please specify the time</string>
    <string name="fromDateAfterToDate">The dates were chosen improperly. Please, correct them.</string>
    <string name="once_a_week">At</string>
    <string name="once_a_month">At %1$d-%2$s day of month</string>
    <string name="time_once_err">The Time is incorrect. Notification cannot be performed before current time!</string>
    <string name="date_err">The Date is incorrect. Notification cannot be performed before current day!</string>
    <string name="date_from_err">The From date is incorrect. Notification cannot start before current day!</string>
    <string name="date_to_err">The To date is incorrect. Notification cannot be performed before current day!</string>
    <string name="date_period_month_err">The notification cannot be performed once a month, please check the dates period!</string>
    <string name="date_period_year_err">The notification cannot be performed once a year, please check the dates period!</string>
    <string name="days_err">Please, select the days for notification</string>
    <string name="add_db_err">Failed to send data. Perhaps, there is a problem with Internet connection</string>
    <string name="add_notification_err">Failed to send notification. Perhaps, there is a problem with Internet connection or contact phone is switched off</string>
    <string name="save_schedule_err">Failed to save schedule</string>
    <string name="group_name_empty">Please enter a group name</string>
    <string name="group_name_exists">This group name is already exists</string>
    <string name="add_db_successfully">The schedule saved successfully</string>
    <string name="add_msg_db_successfully">The message saved successfully</string>
    <string name="schedule_delete_successfully">The schedule was deleted successfully</string>
    <string name="group_delete_successfully">The group was deleted successfully</string>
    <string name="reminder_delete_successfully">The reminder was deleted successfully</string>
    <string name="schedule_delete_error">Failed to delete the schedule</string>
    <string name="group_delete_error">Failed to delete the group</string>
    <string name="reminder_delete_error">Failed to delete the reminder</string>
    <string name="add_group_db_successfully">The group saved successfully</string>
    <string name="add_reminder">Add Reminder</string>
    <string name="groups">List of groups</string>
    <string name="warning_title">Warning</string>
    <string name="warning_msg">Are you sure you want to delete this notification ?</string>
    <string name="warning_msg_repeat">This notification was scheduled to be repeated %1$s from %2$s to %3$s.\n\nAre you sure you want to delete all the repetitions ?</string>
    <string name="warning_yes">Yes</string>
    <string name="warning_no">No</string>
    <string name="status_active">active</string>
    <string name="status_expired">expired</string>
    <string name="dismiss_notification">Click here to dismiss the notification</string>
    <string name="contacts_list_empty_err">Among your contacts there is nobody, who has already installed this application</string>
    <string name="messages">List of messages</string>
    <string name="send_schedules_err">There are contacts, that have not receive the notification</string>
    <string name="web_connect_err">Your phone was not registered.\nIn order that you will be able to set notifications for other contacts, your smartphone should be connected to the Internet.</string>
    <string name="database_err">Your phone was not registered due to server problem. Please, try to register later...</string>
    <string name="phone_registered">Your phone was registered successfully.</string>
    <string name="menu_all_reminders">All Reminders</string>
    <string-array name="daysOfWeek">
        <item name="sun">Sunday</item>
        <item name="mon">Monday</item>
        <item name="tue">Tuesday</item>
        <item name="wed">Wednesday</item>
        <item name="thu">Thursday</item>
        <item name="fri">Friday</item>
        <item name="sat">Saturday</item>
    </string-array>
    <string-array name="spinToday">
        <item name="today">Today</item>
        <item name="week">Coming week</item>
        <item name="month">Coming month</item>
    </string-array>
    <string-array name="spinRemindTo">
        <item name="myself">Myself</item>
        <item name="contacts">Contact</item>
        <item name="groups">Group</item>
    </string-array>
    <string-array name="spinRemindersTo">
        <item name="myself">Myself</item>
        <item name="contacts">Contact</item>
    </string-array>

    <string name="remind_to">Remind To</string>
    <string name="reminders_to">Reminders To</string>
    <string name="set_schedule">Set Schedule</string>
    <string name="composeGroup">Compose a group</string>
    <string name="updateGroup">Please long click on the group to update it</string>
    <string name="groupName">Group name</string>
    <string name="notificationText">Text for Notification</string>
    <string name="add">Add</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="select">Select</string>
    <string name="prepare_msg">Prepare Messages</string>
    <string name="btn_snooze">Snooze</string>
    <string name="btn_done">Close</string>
    <string name="contact_schedules_empty">There are no schedules for Contacts</string>
    <string name="my_schedules_empty">There are no schedules for Myself</string>
    <string name="delete_repeating">Delete repeating</string>
    <string name="txtName">Please enter your name</string>
    <string name="txtPhone">Please enter your phone number</string>
    <string name="details_saved">Your details were saved successfully</string>
    <string name="registration_process">Please wait... The registration process will take a few seconds</string>
    <string name="details_missing">Please, pay attention: Since your phone number was not entered, you will be able to set notifications only to yourself!</string>
    <string name="verify_phone_err">You did not receive a SMS within 30 seconds, perhaps, you made a mistake in entering your phone number. Please, make sure the phone number is correct and try again.</string>
    <string name="verify_sms">You have got this message in order to verify your phone number.</string>
    <string name="verify_phone">In order to verify your phone number you are supposed to receive a SMS within several seconds.\nPlease wait...</string>
    <string name="btnSignIn">Save</string>
    <string name="btnCancel">Cancel</string>
    <string name="failed_schedules">The contacts below didn\'t manage to get the notifications, perhaps, they are not connected to the Internet or their phone is switched off.</string>
    <string name="reading_contact_groups">Reading contact groups. Please wait...</string>
    <string name="btn_once">One-time</string>
    <string name="btn_Repeat">Repeated</string>
    <string name="cbPlayRingtone">Играть рингтон</string>
    <string name="remind">"            Одно         Повторяющееся"</string>
    <string name="reg_failed" >Your phone was not registered due to Internet connection problem.</string>
    <string name="scheduleFrom">From</string>
</resources>
