<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#1DA1F2">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layoutDirection="locale">

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layoutDirection="locale">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/fromDate"
                    android:id="@+id/FromDate"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentStart="true"
                    android:layout_marginTop="5dp"
                    android:textColor="#FFFFFF"
                    android:onClick="showDatePickerDialog"
                    android:textStyle="bold"
                    android:layout_marginLeft="5dp"
                    android:layout_marginStart="5dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/tvPhone"
                    android:layout_alignBottom="@+id/FromDate"
                    android:layout_toEndOf="@+id/FromDate"
                    android:layout_marginTop="5dp"
                    android:layout_marginLeft="10dp"
                    android:onClick="showDatePickerDialog"
                    android:textColor="#000000"
                    android:textStyle="bold"
                    android:layout_marginStart="10dp" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/imageViewDateFrom"
                    android:onClick="showDatePickerDialog"
                    android:background="@drawable/ic_date_range_black_24dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginStart="5dp" />

            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/toDate"
                    android:id="@+id/ToDate"
                    android:layout_below="@+id/FromDate"
                    android:layout_alignParentStart="true"
                    android:layout_marginTop="5dp"
                    android:textColor="#FFFFFF"
                    android:onClick="showDatePickerDialog"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/tvNotifDateTo"
                    android:layout_below="@+id/tvPhone"
                    android:layout_toEndOf="@+id/FromDate"
                    android:layout_marginTop="5dp"
                    android:layout_marginLeft="5dp"
                    android:onClick="showDatePickerDialog"
                    android:textColor="#000000"
                    android:textStyle="bold"
                    android:layout_marginStart="5dp" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/imageViewDateTo"
                    android:onClick="showDatePickerDialog"
                    android:background="@drawable/ic_date_range_black_24dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginStart="5dp" />
            </LinearLayout>


    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/atTime"
            android:layout_below="@+id/tvNotifDateTo"
            android:layout_alignParentStart="true"
            android:layout_marginTop="15dp"
            android:text="@string/atTime"
            android:textColor="#FFFFFF"
            android:onClick="onClickTime"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvTimeAt"
            android:layout_below="@+id/tvNotifDateTo"
            android:layout_toEndOf="@+id/FromDate"
            android:textColor="#000000"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="25dp"
            android:onClick="onClickTime"
            android:textStyle="bold"
            android:layout_marginStart="25dp" />
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/imageViewTimeAt"
            android:onClick="onClickTime"
            android:background="@drawable/ic_access_time_black_24dp"
            android:layout_marginTop="15dp" />
    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="match_parent">

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/onceDay"
                    android:checked="true"
                    android:id="@+id/radioDay"
                    android:layout_below="@+id/tvTimeAt"
                    android:layout_toStartOf="@+id/tvTimeAt"
                    android:textColor="#FFFFFF" />


        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="match_parent">

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/radioWeek"
                android:textColor="#FFFFFF"
                android:text="@string/onceWeek"
                android:checked="false" />

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/cbSun"
                android:layout_marginLeft="25dp"
                android:layout_marginStart="25dp"
                android:text="@string/sunday"
                android:layoutDirection="locale"
                android:textDirection="locale"
                android:textAlignment="viewStart" />

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/cbMon"
                android:text="@string/monday"
                android:layout_marginLeft="15dp"
                android:layoutDirection="locale"
                android:textDirection="locale"
                android:layout_marginStart="15dp" />

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/cbTue"
                android:text="@string/tuesday"
                android:layoutDirection="locale"
                android:textDirection="locale"
                android:layout_marginLeft="15dp"
                android:layout_marginStart="15dp" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="match_parent">

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/cbWed"
                android:text="@string/wednesday"
                android:layoutDirection="locale"
                android:textDirection="locale"
                android:layout_marginLeft="35dp"
                android:layout_marginStart="35dp" />

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/cbThu"
                android:text="@string/thursday"
                android:layoutDirection="locale"
                android:textDirection="locale"
                android:layout_marginLeft="15dp"
                android:layout_marginStart="15dp" />

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/cbFri"
                android:text="@string/friday"
                android:layoutDirection="locale"
                android:textDirection="locale"
                android:layout_marginLeft="15dp"
                android:layout_marginStart="15dp" />

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/cbSat"
                android:text="@string/saturday"
                android:layoutDirection="locale"
                android:textDirection="locale"
                android:layout_marginLeft="15dp"
                android:layout_marginStart="15dp" />
        </LinearLayout>

        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/onceMonth"
                    android:id="@+id/radioMonth"
                    android:layout_below="@+id/groupSchedule"
                    android:layout_toStartOf="@+id/tvTimeAt"
                    android:textColor="#FFFFFF"/>

        </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/onceYear"
                    android:id="@+id/radioYear"
                    android:textColor="#FFFFFF" />

            </LinearLayout>

    </LinearLayout>


</LinearLayout>