<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.donotforget.user.donotforget.SignInActivity"
    android:background="#1DA1F2"
    android:textDirection="locale"
    android:layoutDirection="locale"
    android:paddingStart="@dimen/activity_horizontal_margin"
    android:paddingEnd="@dimen/activity_horizontal_margin">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtName"
        android:id="@+id/txtName"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textColor="#000000"
        android:textDirection="locale"
        android:layoutDirection="locale"
        android:textSize="18sp"
        android:textStyle="bold" />

    <EditText
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:id="@+id/editName"
        android:layout_below="@+id/txtName"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:textDirection="locale"
        android:layoutDirection="locale"
        android:maxLength="80"
        android:maxLines="1"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtPhone"
        android:id="@+id/txtPhone"
        android:layout_below="@+id/editName"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="58dp"
        android:textColor="#000000"
        android:textDirection="locale"
        android:layoutDirection="locale"
        android:textSize="18sp"
        android:textStyle="bold" />

    <EditText
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:id="@+id/editPhone"
        android:layout_below="@+id/txtPhone"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:textDirection="locale"
        android:layoutDirection="locale"
        android:maxLength="25"
        android:maxLines="1"
        android:phoneNumber="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tvPhoneErr"
        android:layout_marginTop="15dp"
        android:text="@string/verify_phone_err"
        android:visibility="invisible"
        android:textColor="#000000"
        android:textStyle="bold"
        android:textSize="18sp"
        android:textDirection="locale"
        android:layoutDirection="locale"
        android:layout_below="@+id/editPhone"
        android:layout_alignEnd="@+id/btnSignIn" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:text="@string/btnCancel"
        android:id="@+id/btnCancel"
        android:background="@drawable/btn_selector"
        android:textColor="#000000"
        android:textSize="12sp"
        android:textStyle="bold"
        android:textDirection="locale"
        android:layoutDirection="locale"
        android:layout_alignParentBottom="true"
        android:layout_alignLeft="@+id/editPhone"
        android:layout_alignStart="@+id/editPhone"
        android:paddingEnd="1dp"
        android:paddingLeft="1dp"
        android:paddingRight="1dp"
        android:paddingStart="1dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:text="@string/btnSignIn"
        android:id="@+id/btnSignIn"
        android:background="@drawable/btn_selector"
        android:textColor="#000000"
        android:textSize="12sp"
        android:textStyle="bold"
        android:textDirection="locale"
        android:layoutDirection="locale"
        android:layout_alignParentBottom="true"
        android:layout_alignRight="@+id/editPhone"
        android:layout_alignEnd="@+id/editPhone"
        android:paddingEnd="1dp"
        android:paddingLeft="1dp"
        android:paddingRight="1dp"
        android:paddingStart="1dp" />
</RelativeLayout>
