<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MessagesActivity"
    android:orientation="vertical"
    android:background="#1DA1F2"
    android:textDirection="locale"
    android:layoutDirection="locale"
    android:paddingStart="@dimen/activity_horizontal_margin"
    android:paddingEnd="@dimen/activity_horizontal_margin">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:textDirection="locale"
        android:layoutDirection="locale"
        android:layout_height="wrap_content">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:id="@+id/eMsgText"
            android:hint="@string/notificationText"
            android:maxLength="400"
            android:maxLines="4"
            android:textDirection="locale"
            android:layoutDirection="locale"
            android:minHeight="50dp" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:textDirection="locale"
        android:layoutDirection="locale"
        android:gravity="center_vertical|center_horizontal">

        <Button
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:text="@string/add"
            android:onClick="onClickAddMessage"
            android:id="@+id/btnAddMsg"
            android:background="@drawable/btn_selector"
            android:textColor="#000000"
            android:textDirection="locale"
            android:layoutDirection="locale"
            android:textStyle="bold"
            android:paddingEnd="1dp"
            android:paddingLeft="1dp"
            android:paddingRight="1dp"
            android:paddingStart="1dp" />

        <Button
            android:layout_height="40dp"
            android:text="@string/edit"
            android:onClick="onClickEditMsg"
            android:id="@+id/btnEditMsg"
            android:background="@drawable/btn_selector"
            android:layout_marginLeft="3dp"
            android:textColor="#000000"
            android:textStyle="bold"
            android:textDirection="locale"
            android:layoutDirection="locale"
            android:layout_marginStart="3dp"
            android:paddingEnd="1dp"
            android:paddingLeft="1dp"
            android:paddingRight="1dp"
            android:paddingStart="1dp"
            android:layout_width="100dp" />

        <Button
            android:layout_height="40dp"
            android:text="@string/delete"
            android:onClick="onClickDeleteMsg"
            android:id="@+id/btnDeleteMsg"
            android:background="@drawable/btn_selector"
            android:layout_marginLeft="3dp"
            android:textColor="#000000"
            android:textStyle="bold"
            android:textDirection="locale"
            android:layoutDirection="locale"
            android:layout_marginStart="3dp"
            android:paddingEnd="1dp"
            android:paddingLeft="1dp"
            android:paddingRight="1dp"
            android:paddingStart="1dp"
            android:layout_width="100dp" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="10dp"
        android:layout_weight="0.1"
        android:textDirection="locale"
        android:layoutDirection="locale"
        android:layout_marginBottom="10dp">

        <ListView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/lvMessages"
            android:textDirection="locale"
            android:layoutDirection="locale"
            android:choiceMode="singleChoice" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:gravity="bottom|end"
        android:textDirection="locale"
        android:layoutDirection="locale"
        android:layout_height="50dp">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:text="@string/save"
            android:onClick="onClickSaveMsg"
            android:id="@+id/btnMsgSave"
            android:background="@drawable/btn_selector"
            android:textColor="#000000"
            android:layout_marginBottom="5dp"
            android:textDirection="locale"
            android:layoutDirection="locale"
            android:textStyle="bold"
            android:paddingEnd="1dp"
            android:paddingLeft="1dp"
            android:paddingRight="1dp"
            android:paddingStart="1dp" />
    </LinearLayout>
</LinearLayout>
