<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".ReminderActivity"
    android:orientation="vertical"
    android:background="#1DA1F2"
    android:paddingStart="@dimen/activity_horizontal_margin"
    android:textDirection="locale"
    android:layoutDirection="locale"
    android:paddingEnd="@dimen/activity_horizontal_margin">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:textDirection="locale"
        android:layoutDirection="locale"
        android:layout_height="wrap_content">

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:textDirection="locale"
        android:layoutDirection="locale"
        android:layout_height="wrap_content">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textDirection="locale"
            android:layoutDirection="locale"
            android:id="@+id/editMessage"
            android:hint="@string/msgText"
            android:maxLength="400"
            android:maxLines="4"
            android:minHeight="50dp" />
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textDirection="locale"
        android:layoutDirection="locale"
        android:layout_marginTop="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/remind_to"
            android:id="@+id/tvRemindTo"
            android:textColor="#FFFFFF"
            android:textStyle="bold"
            android:textDirection="locale"
            android:layoutDirection="locale"
            android:textSize="16sp" />

        <Spinner
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/spinRemindTo"
            android:textDirection="locale"
            android:layoutDirection="locale"
            android:layout_marginLeft="5dp"
            android:layout_marginStart="5dp" />

    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:textDirection="locale"
        android:layoutDirection="locale"
        android:layout_height="1dp"
        android:background="#FEAC00"></LinearLayout>

    <FrameLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:id="@+id/container"
        android:layout_weight="0.1"
        android:textDirection="locale"
        android:layoutDirection="locale"
        android:layout_marginTop="5dp"></FrameLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:gravity="bottom|right"
        android:textDirection="locale"
        android:layoutDirection="locale"
        android:layout_height="51dp">

        <Button
            android:textColor="#000000"
            android:textSize="12sp"
            android:background="@drawable/btn_selector"
            android:shadowDx="0"
            android:shadowDy="0"
            android:layout_height="50dp"
            android:text="@string/set_schedule"
            android:id="@+id/btnSchedule"
            android:textDirection="locale"
            android:layoutDirection="locale"
            android:textStyle="bold"
            android:paddingEnd="1dp"
            android:paddingLeft="1dp"
            android:paddingRight="1dp"
            android:paddingStart="1dp"
            android:layout_width="150dp" />

    </LinearLayout>

</LinearLayout>
